<resources>
    <string name="app_name">cs5520group7</string>
    <string name="imgSelection">Please select an image to send</string>
    <string name="starimge">star</string>
    <string name="crossimge">cross</string>
    <string name="radioimge">radio</string>
    <string name="sendNotification">Notify friend</string>
    <string name="backtoHome">Back</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="category">Category</string>
    <string name="add_to_list">add List</string>
    <string name="view_book">View</string>
    <string name="post_review">Review</string>
    <string name="todo">TODO</string>
    <string name="you_may_like">You May Like</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="myList">MyList</string>
    <string name="post">Post</string>
    <string name="bookimage">bookimage</string>
    <string name="pagecount_icon">pagecount icon</string>
    <string name="language_icon">language icon</string>
    <string name="remove_from_bookmarks">Remove from bookList</string>
    <string name="add_to_bookmarks">Add to bookList</string>
    <string name="overview">Overview</string>
    <string name="more_details">More Details</string>
    <string name="published_date">Published Date</string>
    <string name="publisher">Publisher</string>
    <string name="isbn">ISBN</string>
    <string name="categoryBookInfo">Categories</string>
    <string name="maturity_rating">Maturity Rating</string>
    <string name="reviewsBook">Reviews</string>
    <string name="read_ebook">Read eBook</string>
    <string name="commenterimg">commenterimg</string>
    <string name="username">Username</string>
    <string name="review">Review</string>





    <string-array name="spinner_choices">
        <item>See More Categories</item>
        <item>Art</item>
        <item>Biography</item>
        <item>Business</item>
        <item>Children</item>
        <item>Comics</item>
        <item>Cooking</item>
        <item>Fantasy</item>
        <item>Fiction</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Religion</item>
        <item>Romance</item>
        <item>Science</item>
        <item>Thriller</item>
        <item>Travel</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoryname">categoryName</string>
    <string name="newest">Newest</string>
    <string name="relevance">Relevance</string>
    <string name="sort_image">Sort Image</string>
    <string name="post_review_infoPage">Post Review</string>

</resources>