<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/discover"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/discover" />
    <item
        android:id="@+id/myList"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/myList" />
    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/post" />
    <item
        android:id="@+id/me"
        android:icon="@drawable/ic_baseline_feedback_24"
        android:title="Feedback" />
</menu>