<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StickerSelectionActivity">

    <ImageButton
        android:id="@+id/radioBtn"
        android:layout_width="104dp"
        android:layout_height="56dp"

        android:backgroundTint="@color/white"
        android:contentDescription="@string/radioimge"
        app:layout_constraintBottom_toTopOf="@+id/starBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection_tv"
        app:srcCompat="@android:drawable/btn_radio" />

    <ImageButton
        android:id="@+id/crossBtn"
        android:layout_width="101dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/crossimge"
        app:layout_constraintBottom_toTopOf="@+id/backUserHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starBtn"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/starBtn"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/starimge"
        app:layout_constraintBottom_toTopOf="@+id/crossBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioBtn"
        app:srcCompat="@android:drawable/btn_star"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/selection_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imgSelection"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backUserHome"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:text="@string/backtoHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/NotiBtn"
        app:layout_constraintTop_toBottomOf="@+id/crossBtn" />

    <Button
        android:id="@+id/NotiBtn"
        android:layout_width="148dp"
        android:layout_height="49dp"
        android:text="@string/sendNotification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backUserHome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crossBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>