<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/DiscoveryBookImg"
            android:layout_width="110dp"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/default_book_img"
            android:contentDescription="@string/todo"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/discoveryBookTitle"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/book_title" />

            <TextView
                android:id="@+id/discoveryBookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_author" />

            <TextView
                android:id="@+id/discoveryBookCategory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category" />

            <RatingBar
                android:id="@+id/discoveryBookRating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:scaleX="1"
                android:scaleY="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/discoveryPg_ViewBtn"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/view_book"
                android:textSize="12sp"
                android:background="@drawable/rounded_corners_btn"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/discoveryPg_addListBtn"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="@string/add_to_list"
                android:textSize="12sp"
                android:background="@drawable/rounded_corners_btn"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/discoveryPg_PostBtn"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:shadowColor="#DBDCDC"
                android:text="@string/post_review"
                android:textSize="12sp"
                android:background="@drawable/rounded_corners_btn"
                android:layout_marginBottom="8dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>