<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBeige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorLightBeige">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:contentDescription="@string/commenterimg"
            android:src="@drawable/commenter"
            android:backgroundTint="@color/colorLightBeige"></ImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:id="@+id/review_user"
                android:layout_marginBottom="8dp">
            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:ellipsize="end"
                android:maxLines="100"
                android:singleLine="false"
                android:text="@string/review"
                android:id="@+id/reviewTV"
                android:layout_marginBottom="10dp">
            </TextView>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>